added svd project

--- a/index.html
+++ b/index.html
@@ -246,6 +246,16 @@
           </div>
         </div>
       </div>
+      <div class="row g-0 portfolio-reverse">
+        <div class="col-md-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
+          <div class="m-4 mt-md-2 text-end">
+            <p class="text-teal text-small">Algebra / Jupyter notebook / Python</p>
+            <h3>Image compression with SVD algorithm</h3>
+            <p class="text-muted">Using Python to implement the SVD algorithm to compress images, while maintaining colors! and with a big flexibility on choosing the degree of compression, so that we can choose the best fitting quality/storage ratio.</p>
+          </div>
+        </div>
+        <div class="col-md-6"><a href="https://drive.google.com/file/d/1S9wJk9tpOt8m2u1HJ7QgGn1k1DznEojz/view?usp=sharing" target="_blank"><img class="img-fluid" src="images/project-4.jpg" width="800" height="500"/></a></div>
+      </div>
     </div>
   </div>
   <!-- <div class="shadow-1-strong bg-white my-5 p-5" id="references">
